# 10ksim

./: .gitignore  Makefile  README.md  check_format.sh  config.py  deployment.py  example_log_analysis.py  full_run.py  gen_times.py  inspect_db.py  log_analysis.py  log_multi_analysis.py  main.py  pyproject.toml  requirements.txt  scrape.py  scrape.yaml  test_dashboard.py
.github/workflows/: ci.yml
accelerated_deployment/: bootstrap.yaml  cleanup.sh  deployment.sh  midstrap.yaml  nodes.yaml  publisher.yaml  service-bootstrap.yaml
accelerated_deployment/docker/: Dockerfile  getenr.sh
accelerated_deployment/publisher_headless/: Dockerfile  (+2 more)
analysis/: README.md  kad.py  log_analysis.py  log_multi_analysis.py  requirements.txt  scrape.py
argo-workflows/: waku.yml  zerotesting-full-access-for-argo.yaml
charts/: cleanup.sh  deploy.sh  values.yaml  waku-deployment-0.1.0.tgz
debug_image/: Dockerfile  deployment.yaml  dns_loop.py
deployment/: README.md  bootstrap.yaml  cleanup.sh  deployment-preview.sh  deployment.sh  deployment_batch.sh  midstrap.yaml  nodes-gowaku-preview.yaml  nodes-gowaku.yaml  nodes-nwaku.yaml  nodes.yaml  prepare_env.sh  publisher-dummy.yaml  publisher.yaml  service.yaml  store_nodes.yaml
deployments/: Makefile  README.md  deployment.py  kube_utils.py  registry.py  requirements.txt
dst_dashboard/: .dockerignore  Dockerfile  README.md  auth.py  main.py  sample_config.yaml
experiments/: Makefile  README.md  kube_utils.py  main.py  registry.py  requirements.txt
hooks/: pre-push
kubernetes-scripts/: rke2-set-ip.service  rke2-startup-ip.sh
(+992 files in other folders)
