[project]
name = "10ksim"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.2.2",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "kubernetes>=33.1.0",
    "aiohttp>=3.9.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "result>=0.17.0",
    "ruamel-yaml==0.17.21",
    "seaborn>=0.13.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "montydb>=2.5.3",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-ra"